--- a/plugins/PureChat/config.yml
+++ b/plugins/PureChat/config.yml
@@ -1,31 +1,11 @@
-
-# PureChat by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
-
 ---
-
-# PureChat version string
-# - string
-version: "1.4.10-6"
-
-# Set default factions plugin for PureChat
-# - FactionsPro / null
+version: 1.4.10-6
 default-factions-plugin: FactionsPro
-
-# Enable this if you want to use per-world chat formats / per-world nametags for players
-# - true / false
 enable-multiworld-chat: false
-
-# Please check if you have all PurePerms groups in your server here
-
-# &0: Black, &1: Dark Blue, &2: Dark Green, &3: Dark Aqua, &4: Dark Red, &5: Dark Purple, &6: Gold, &7: Gray, &8: Dark Gray, &9: Blue
-# &a: Green, &b: Aqua, &c: Red, &d: Light Purple, &e: Yellow, &f: White
-# &k: Obfuscated, &l: Bold, &m: Strikethrough, &n: Underline, &o: Italic, &r: Reset
-
-# Available PureChat tags: {display_name}, {msg}, {fac_name}, {fac_rank}, {prefix}, {suffix}, {world}
 groups:
   Guest:
     chat: '&7[Guest] &f{fac_rank}{fac_name}&a {display_name} &7> &f{msg}'
-    nametag: '&7[Guest] &f{display_name}'
+    nametag: '{PLAYER} {display_name}'
     worlds: []
   Admin:
     chat: '&c[Admin] &7{fac_rank}{fac_name}&6 {display_name} &d>&b {msg}'
