--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Properties Config file
-#Sat Oct 16 17:04:07 WIB 2021
+#Wed Nov 10 09:44:08 WIB 2021
 language=eng
 motd=§fＦＬＯＴＶ
 server-port=19132
@@ -18,3 +18,5 @@ enable-query=off
 auto-save=on
 view-distance=32
 xbox-auth=on
+server-portv6=19133
+enable-ipv6=on
