--- a/server.properties
+++ b/server.properties
@@ -1,10 +1,12 @@
 #Properties Config file
-#Wed Nov 10 09:44:08 WIB 2021
+#Wed Nov 10 09:47:16 WIB 2021
 language=eng
 motd=§fＦＬＯＴＶ
 server-port=19132
-white-list=1
-max-players=10
+server-portv6=19133
+enable-ipv6=on
+white-list=on
+max-players=20
 gamemode=1
 force-gamemode=off
 hardcore=off
@@ -18,5 +20,3 @@ enable-query=off
 auto-save=on
 view-distance=32
 xbox-auth=on
-server-portv6=19133
-enable-ipv6=on
