--- a/pocketmine.yml
+++ b/pocketmine.yml
@@ -6,7 +6,7 @@
 settings:
   #Whether to send all strings translated to server locale or let the device handle them
   force-language: false
-  shutdown-message: "Máy chủ đã đóng"
+  shutdown-message: "Server closed"
   #Allow listing plugins via Query
   query-plugins: false
   #Enable plugin and core profiling by default
@@ -108,7 +108,7 @@ player:
   verify-xuid: true
 
 level-settings:
-  #The default format that levels will use when created
+  #The default format that worlds will use when created
   default-format: leveldb
 
 chunk-sending:
@@ -156,7 +156,7 @@ auto-updater:
   on-update:
     warn-console: true
   #Can be development, alpha, beta or stable.
-  preferred-channel: development
+  preferred-channel: beta
   #If using a development version, it will suggest changing the channel
   suggest-channels: true
   host: update.pmmp.io
@@ -176,7 +176,7 @@ aliases:
   #savestop: [save-all, stop]
 
 worlds:
-  #These settings will override the generator set in server.properties and allows loading multiple levels
+  #These settings will override the generator set in server.properties and allows loading multiple worlds
   #Example:
   #world:
   # seed: 404
@@ -187,4 +187,4 @@ plugins:
   #Setting this to true will cause the legacy structure to be used where plugin data is placed inside the --plugins dir.
   #False will place plugin data under plugin_data under --data.
   #This option exists for backwards compatibility with existing installations.
-  legacy-data-dir: true
+  legacy-data-dir: false
