--- a/server.properties
+++ b/server.properties
@@ -13,7 +13,7 @@ hardcore=off
 pvp=on
 difficulty=2
 generator-settings=
-level-name=FLOTV
+level-name=Master
 level-seed=
 level-type=DEFAULT
 enable-query=off
