--- a/plugins/MyPlot/config.yml
+++ b/plugins/MyPlot/config.yml
@@ -38,7 +38,7 @@ UI Forms: true
 
 # The data provider where plot data is stored.
 # Current providers are: sqlite, mysql, json, and yaml.
-DataProvider: sqlite
+DataProvider: yaml
 
 # contains settings for mysql provider to use when selected
 MySQLSettings:
