--- a/plugins/Track/history.yml
+++ b/plugins/Track/history.yml
@@ -20,4 +20,5 @@
 'Thu 02/12/2021 23:34:15(PM) : CONSOLE': mw
 'Thu 02/12/2021 23:34:18(PM) : CONSOLE': pl
 'Thu 02/12/2021 23:34:20(PM) : CONSOLE': stop
+'Fri 03/12/2021 13:21:03(PM) : CONSOLE': mw
 ...
