--- a/plugins/Track/history.yml
+++ b/plugins/Track/history.yml
@@ -21,4 +21,7 @@
 'Thu 02/12/2021 23:34:18(PM) : CONSOLE': pl
 'Thu 02/12/2021 23:34:20(PM) : CONSOLE': stop
 'Fri 03/12/2021 13:21:03(PM) : CONSOLE': mw
+'Thu 23/12/2021 20:59:42(PM) : CONSOLE': ver
+'Thu 23/12/2021 20:59:55(PM) : CONSOLE': ver simplenpc
+'Thu 23/12/2021 21:00:20(PM) : CONSOLE': stop
 ...
