--- a/resource_packs/resource_packs.yml
+++ b/resource_packs/resource_packs.yml
@@ -1,9 +1,8 @@
 force_resources: true
 resource_stack:
-  # - FLOTV Font.zip
-  # - FLOTV Particles.zip
-  # - FLOTV Sides.zip
-  # - FLOTV Sky.zip
-  # - FLOTV Sounds.zip
-  # - FLOTV UI.zip
-  - CTVL.zip
+  - FLOTV Font.zip
+  - FLOTV Particles.zip
+  - FLOTV Sides.zip
+  - FLOTV Sky.zip
+  - FLOTV Sounds.zip
+  - FLOTV UI.zip
